--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,7 @@ annotated-types==0.7.0
  Jinja2==3.1.6
  jiter==0.8.2
  MarkupSafe==3.0.2
- openai>=0.27.0.
+ openai>=0.27.0
  pydantic==2.10.6
  pydantic_core==2.27.2
  sniffio==1.3.1
